# KeyBot-tg

./: .gitignore  README.md  pyproject.toml
src/keybot_tg/: __main__.py
